# gda-backup

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  diesel.toml  docker-compose.yml  gda-backup.tf  notes.md
.github/: FUNDING.yml
.github/workflows/: actions.yml  docker.yml  rust.yml
docker/: backup.sh  docker-compose.yml  start.sh
migrations/2024-05-31-224228_create_states/: down.sql  up.sql
migrations/create_states/: up.sql
scripts/: backup.sh  docker_test.sh  dry_run.sh  restore.sh  test.sh
src/: aws.rs  backup.rs  dynamodb.rs  environment.rs  lib.rs  main.rs  models.rs  restore.rs  s3.rs  schema.rs
tests/: .env  config.yml  config_dry.yml  docker-compose.yml  integration_test.rs
tests/common/: mod.rs
