[package]
name = "gda_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.14"
aws-config = "1.5.0"
aws-sdk-dynamodb = "1.31.1"
aws-sdk-s3 = "1.30.0"
aws-smithy-runtime-api = "1.6.2"
aws-smithy-types = "1.1.10"
checksums = "0.9.1"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
diesel = {version = "*", features = ["postgres"]}
dotenvy = "0.15.7"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
regex = "1.10.5"
serde = "1.0.203"
serde_yml = "0.0.10"
serial_test = "3.1.1"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
walkdir = "2.5.0"
