[package]
name = "gda_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.1.1"
aws-config = "1.8.12"
aws-sdk-dynamodb = "1.101.0"
aws-sdk-s3 = "1.117.0"
aws-smithy-runtime-api = "1.9.3"
aws-smithy-types = "1.3.4"
checksums = "0.9.1"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "env"] }
diesel = {version = "2.3.4", features = ["postgres"]}
diesel_migrations = "2.3.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.29"
ntfy = "0.8.0"
rand = "0.9.2"
regex = "1.12.2"
serde = "1.0.228"
serde_norway = "0.9.42"
serial_test = "3.2.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.5.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary*
